# hubitat-mcp

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  build.bat  docker-compose.yml  pyproject.toml
src/hubitat_mcp/: server.py
